--- a/src/app/Owner/authorizations/visit/visit.page.html
+++ b/src/app/Owner/authorizations/visit/visit.page.html
@@ -1,55 +1,55 @@
 <ion-header>
-  <ion-toolbar color="primary">
-      <ion-buttons slot="start">
-          <ion-back-button defaultHref='/menu-owner'></ion-back-button>
-      </ion-buttons>
-      <ion-title class="ion-text-capitalize ion-text-center">Autorizaciones</ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref='/menu-owner'></ion-back-button>
+        </ion-buttons>
+        <ion-title class="ion-text-capitalize ion-text-center">Autorizaciones</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
 
     <ion-row>
         <ion-card>
-          <ion-item>
-            <ion-list>
-              <ion-row>
-                <ion-col>
-                  <ion-label> Apellido </ion-label>
-                </ion-col>
-                <ion-col>
-                  <ion-label> Nombre </ion-label>
-                </ion-col>
-                <ion-col>
-                  <ion-label> Fecha Hasta </ion-label>
-                </ion-col>
-              </ion-row>
-            </ion-list>
-          </ion-item>
-          <ion-item *ngFor="let qr of qrs">
-            <ion-list>
-              <ion-row>
-                <ion-col>
-                  <ion-label> {{qr.qrAutorizado.apellidoPersona}}  </ion-label>
-                </ion-col>
-                <ion-col>
-                  <ion-label> {{qr.qrAutorizado.nombrePersona}} </ion-label>
-                </ion-col>
-                <ion-col>
-                  <ion-label> {{qr.fechaFinQR | date: 'dd/MM/yyyy'}} </ion-label>
-                </ion-col>
-              </ion-row>
-            </ion-list>
-          </ion-item>
+            <ion-item>
+                <ion-list>
+                    <ion-row>
+                        <ion-col>
+                            <ion-label> Apellido </ion-label>
+                        </ion-col>
+                        <ion-col>
+                            <ion-label> Nombre </ion-label>
+                        </ion-col>
+                        <ion-col>
+                            <ion-label> Fecha Hasta </ion-label>
+                        </ion-col>
+                    </ion-row>
+                </ion-list>
+            </ion-item>
+            <ion-item *ngFor="let qr of qrs">
+                <ion-list>
+                    <ion-row>
+                        <ion-col>
+                            <ion-label> {{qr?.qrAutorizado?.apellidoPersona}} </ion-label>
+                        </ion-col>
+                        <ion-col>
+                            <ion-label> {{qr?.qrAutorizado?.nombrePersona}} </ion-label>
+                        </ion-col>
+                        <ion-col>
+                            <ion-label> {{qr?.fechaFinQR | date: 'dd/MM/yyyy'}} </ion-label>
+                        </ion-col>
+                    </ion-row>
+                </ion-list>
+            </ion-item>
         </ion-card>
-      </ion-row>
+    </ion-row>
 
 </ion-content>
 
 <ion-footer>
     <ion-fab vertical="bottom" horizontal="end" slot="fixed">
         <ion-fab-button (click)="generarAutorizacion()">
-          <ion-icon name="add"></ion-icon>
+            <ion-icon name="add"></ion-icon>
         </ion-fab-button>
     </ion-fab>
 </ion-footer>
