--- a/src/app/Administrador/manage-guard/manage-guard.page.html
+++ b/src/app/Administrador/manage-guard/manage-guard.page.html
@@ -13,14 +13,25 @@
             Guardias
         </ion-list-header>
 
-        <ion-item *ngFor="let guardia of guardias; let i=index">
-            <ion-avatar slot="start">
-                <img src="../../../assets/image.png">
-            </ion-avatar>
-            <ion-label>
-                <h2>{{guardia?.nombrePersona}} {{guardia?.apellidoPersona}}</h2>
-            </ion-label>
-        </ion-item>
+        <ion-item-sliding *ngFor="let guardia of guardias; let i=index">
+
+            <ion-item>
+                <ion-avatar slot="start">
+                    <img src="../../../assets/image.png">
+                </ion-avatar>
+                <ion-label>
+                    <h2>{{guardia?.nombrePersona}} {{guardia?.apellidoPersona}}</h2>
+                </ion-label>
+            </ion-item>
+
+            <ion-item-options side="end">
+                <ion-item-option (click)="borrar(i)" color="danger" mode="ios">
+                    <ion-icon slot="icon-only" name="trash"></ion-icon>
+                </ion-item-option>
+            </ion-item-options>
+
+        </ion-item-sliding>
+
     </ion-list>
 
 </ion-content>
