--- a/src/app/Administrador/menu-administrator/menu-administrator.page.html
+++ b/src/app/Administrador/menu-administrator/menu-administrator.page.html
@@ -27,6 +27,9 @@
         <ion-item>
             <ion-label (click)="Backup()">Backup</ion-label>
         </ion-item>
+        <ion-item>
+            <ion-label (click)="personasBloqueadas()">Reporte Personas Bloqueadas</ion-label>
+        </ion-item>
     </ion-list>
 </ion-content>
 <ion-footer>
