--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -32,6 +32,18 @@
                     <ion-label (click)="evento()">Consultar evento</ion-label>
                 </ion-item>
                 <ion-item>
+                    <ion-icon slot="start" name="settings"></ion-icon>
+                    <ion-label (click)="habilitar()">Habilitar Personas</ion-label>
+                </ion-item>
+                <ion-item>
+                    <ion-icon slot="start" name="settings"></ion-icon>
+                    <ion-label (click)="deshabilitar()">Deshabilitar Personas</ion-label>
+                </ion-item>
+                <ion-item>
+                    <ion-icon slot="start" name="list-box"></ion-icon>
+                    <ion-label (click)="personasBloqueadas()">Reporte Personas Bloqueadas</ion-label>
+                </ion-item>
+                <ion-item>
                     <ion-icon slot="start" name="close"></ion-icon>
                     <ion-label (click)="cerrarSesion()">Cerrar sesion</ion-label>
                 </ion-item>
