--- a/src/app/Administrador/search-person-guard/search-person-guard.page.html
+++ b/src/app/Administrador/search-person-guard/search-person-guard.page.html
@@ -13,7 +13,7 @@
         <h3>Por favor ingrese el DNI</h3>
         <ion-item>
           <ion-label>DNI:</ion-label>
-          <ion-input class="ml-2" type="text" placeholder="DNI" [(ngModel)]="dni"></ion-input>
+          <ion-input class="ml-2" type="tel" minlength="7" maxlength="9" placeholder="DNI" [(ngModel)]="dni"></ion-input>
         </ion-item>
     </ion-row>
     <div style="text-align-last: right">
