--- a/src/app/Administrador/new-guard/new-guard.page.html
+++ b/src/app/Administrador/new-guard/new-guard.page.html
@@ -16,7 +16,7 @@
         <ion-label position="floating">DNI
             <ion-text color="danger">*</ion-text>
         </ion-label>
-        <ion-input class="ml-2" type="text" [(ngModel)]="dni"></ion-input>
+        <ion-input class="ml-2" type="tel" minlength="7" maxlength="9" [(ngModel)]="dni"></ion-input>
     </ion-item>
     <ion-item>
         <ion-label position="floating">Nombre
@@ -55,7 +55,7 @@
         <ion-label position="floating">Contraseña
             <ion-text color="danger">*</ion-text>
         </ion-label>
-        <ion-input required [(ngModel)]="password" type="password"></ion-input>
+        <ion-input minlength="6" maxlength="15" required [(ngModel)]="password" type="password"></ion-input>
     </ion-item>
     <ion-item *ngIf="false" lines="none">
         <ion-text color="danger" class="form-error">
