--- a/src/app/Owner/events/view-friend-list/add-friend/add-friend.page.html
+++ b/src/app/Owner/events/view-friend-list/add-friend/add-friend.page.html
@@ -13,7 +13,7 @@
         <h3>Por favor ingrese el DNI</h3>
         <ion-item>
             <ion-label>DNI : </ion-label>
-            <ion-input type="number" placeholder="Ingrese DNI" [(ngModel)]="dni"></ion-input>
+            <ion-input type="tel" minlength="7" maxlength="9" placeholder="Ingrese DNI" [(ngModel)]="dni"></ion-input>
         </ion-item>
     </ion-row>
     <div style="text-align-last: right">
