--- a/src/app/ingreso/newperson/newperson.page.html
+++ b/src/app/ingreso/newperson/newperson.page.html
@@ -36,7 +36,7 @@
             <ion-label position="floating">Numero de teléfono
                 <ion-text color="danger">*</ion-text>
             </ion-label>
-            <ion-input required type="number" [(ngModel)]="telefonoPersona"></ion-input>
+            <ion-input required type="tel" minlength="7" maxlength="10" [(ngModel)]="telefonoPersona"></ion-input>
         </ion-item>
 
 
