--- a/src/app/shared/personas-bloqueadas/personas-bloqueadas.page.html
+++ b/src/app/shared/personas-bloqueadas/personas-bloqueadas.page.html
@@ -9,39 +9,69 @@
 
 <ion-content>
 
-    <ion-row>
-        <ion-card>
-          <ion-item>
-            <ion-list>
-              <ion-row>
-                <ion-col>
-                  <ion-label> Apellido </ion-label>
-                </ion-col>
-                <ion-col>
-                  <ion-label> Nombre </ion-label>
-                </ion-col>
-                <ion-col>
-                  <ion-label> Fecha Hasta </ion-label>
-                </ion-col>
-              </ion-row>
-            </ion-list>
-          </ion-item>
-          <ion-item *ngFor="let p of persona">
-            <ion-list>
-              <ion-row>
-                <ion-col>
-                  <ion-label> {{p.apellidoPersona}}  </ion-label>
-                </ion-col>
-                <ion-col>
-                  <ion-label> {{p.nombrePersona}} </ion-label>
-                </ion-col>
-                <ion-col>
-                  <ion-label> {{p.dniPersona}} </ion-label>
-                </ion-col>
-              </ion-row>
-            </ion-list>
-          </ion-item>
-        </ion-card>
+  <ion-row>
+    <ion-list>
+      <ion-row>
+          <ion-col>
+              <ion-item>
+                  <ion-label>
+                      Apellido
+                  </ion-label>
+              </ion-item>
+          </ion-col>
+          <ion-col>
+              <ion-item>
+                  <ion-label>
+                      Nombre
+                  </ion-label>
+              </ion-item>
+          </ion-col>
+          <ion-col>
+              <ion-item>
+                  <ion-label>
+                      DNI
+                  </ion-label>
+              </ion-item>
+          </ion-col>
+          <ion-col>
+              <ion-item>
+                  <ion-label>
+                      Fecha
+                  </ion-label>
+              </ion-item>
+          </ion-col>
       </ion-row>
+      <ion-row *ngFor="let p of persona">
+          <ion-col>
+              <ion-item>
+                  <ion-label>
+                      {{p.apellidoPersona}}
+                  </ion-label>
+              </ion-item>
+          </ion-col>
+          <ion-col>
+              <ion-item>
+                  <ion-label>
+                      {{p.nombrePersona}}
+                  </ion-label>
+              </ion-item>
+          </ion-col>
+          <ion-col>
+              <ion-item>
+                  <ion-label>
+                      {{p.dniPersona}}
+                  </ion-label>
+              </ion-item>
+          </ion-col>
+          <ion-col>
+              <ion-item>
+                  <ion-label>
+                          {{p.personaEstado.fecha | date: 'dd-MM-yyyy'}}
+                  </ion-label>
+              </ion-item>
+          </ion-col>
+      </ion-row>
+  </ion-list>
+  </ion-row>
 
 </ion-content>
