new vehicle propietario y usuario arreglado

--- a/src/app/User/newvehicle4/newvehicle4.page.html
+++ b/src/app/User/newvehicle4/newvehicle4.page.html
@@ -62,9 +62,9 @@
         </ion-item>
     </ion-row> -->
     <ion-row>
-        <ion-col>
+        <!-- <ion-col>
             <ion-button color="primary " routerLink="/carnet" routerLinkActive="router-link-active ">Agregar Carnet</ion-button>
-        </ion-col>
+        </ion-col> -->
         <ion-col>
             <ion-button color="primary " (click)="postVehiculo() ">Crear Vehiculo</ion-button>
         </ion-col>
