--- a/src/app/Administrador/new-common-space/new-common-space.page.html
+++ b/src/app/Administrador/new-common-space/new-common-space.page.html
@@ -8,37 +8,34 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-row style="place-content: center" class="row-img">
-    <!-- <ion-img [src]="espacioComun?.fotoEspacioComunContentType"></ion-img> -->
-    <ion-img *ngIf="fotoEspCom !== undefined" [src]=fotoEspCom widht="80px" height="80px"></ion-img>
-    <ion-img *ngIf="fotoEspCom === undefined" [src]=fotoVacia widht="80px" height="80px"></ion-img>
-  </ion-row>
-  <ion-row>
-    <ion-icon name="image" class="mr-3 icon" (click)="getPictureAlbum()"></ion-icon>
-    <ion-icon name="camera" class="icon" (click)="getPicture()"></ion-icon>
-</ion-row>
-  <ion-row style="place-content: center">
-    <ion-item>
-        <ion-label position="floating">Nombre Espacio Comun
-            <ion-text color="danger">*</ion-text>
-        </ion-label>
-        <ion-input required type="text" [(ngModel)]="nombreEspComun"></ion-input>
-    </ion-item>
-  </ion-row>
-  <ion-row>
-    <ion-item>
+
+
+  <ion-card>
+    <ion-row>
+      <img *ngIf="convertedImg !== undefined" [src]="convertedImg" height="250px">
+      <img *ngIf="convertedImg === undefined" [src]="fotoVacia" height="250px">
+    </ion-row>
+    <ion-row class="mt-2">
+        <ion-icon name="image" class="mr-3 icon" (click)="getPictureAlbum()"></ion-icon>
+        <ion-icon name="camera" class="icon" (click)="getPicture()"></ion-icon>
+    </ion-row>
+    
+    <ion-card-content>
+        <ion-item style="text-align-last: center;">
+            <ion-label position="floating">Nombre Espacio Comun
+                <ion-text color="danger">*</ion-text>
+            </ion-label>
+            <ion-input required type="text" [(ngModel)]="nombreEspComun"></ion-input>
+        </ion-item>
+
         <ion-item>
-            <ion-label>Disponibilidad Hasta:</ion-label>
+            <ion-label>Disponibilidad Desde:</ion-label>
             <ion-datetime displayFormat="HH:mm"  
                           picker-format="HH:mm" 
                           [value]="horaDesde"
                           [(ngModel)]="horaDesde"></ion-datetime>
-                          <!-- [(ngModel)]="espacioComun.horaDesde"></ion-datetime> -->
-                        </ion-item>
-    </ion-item>
-  </ion-row>
-  <ion-row>
-    <ion-item>
+        </ion-item>
+
         <ion-item>
             <ion-label>Disponibilidad Hasta:</ion-label>
             <ion-datetime displayFormat="HH:mm"  
@@ -46,20 +43,9 @@
                           [value]="horaHasta"
                           [(ngModel)]="horaHasta"></ion-datetime>
           </ion-item>
-    </ion-item>
-  </ion-row>
-  <!-- <ion-row>
-    <ion-item>
-      <ion-item>
-        <ion-label>Periodo de reserva:</ion-label>
-        <ion-datetime displayFormat="HH:mm"  
-                      picker-format="HH:mm" 
-                      [value]="periodo"
-                      minute-value="0,15,30,45"></ion-datetime>
-                      [(ngModel)]="espacioComun?.espacioTipos[0].periodo"
-      </ion-item>
-    </ion-item>
-  </ion-row> -->
+
+    </ion-card-content>
+  </ion-card>
 
   <ion-row class="mt-3">
     <ion-col>
