aseguradora al crear auto

--- a/src/app/ingreso/newvehicle/newvehicle.page.scss
+++ b/src/app/ingreso/newvehicle/newvehicle.page.scss
@@ -1,39 +1,35 @@
-@media (min-width: 100px) {
-    
-    h2 {
-      text-align: center;
-} 
-    h6 {
-      padding-left: 30px;
-      padding-top: 20px;
-    }
-    ion-row {
-      padding-left: 10px;
-    }
-    // ion-button{
-    //   padding-top: 20px;
-    // }
-    // .boton {
-    //  position: relative;
-    //   margin-left: 70%;
-    //   padding-top: 10%;
-     
-    // }
-}
- @media (max-width: 1000px) {
-    
-      h2 {
-        text-align: center;
-  }
-      h6 {
-        padding-left: 30px;
-      padding-top: 20px;
-  }
-  ion-row {
-      padding-left: 10px;
-    }
-    // ion-button{
-    //   padding-top: 20px;
-    // }
-    
-}
+// @media (min-width: 100px) {
+//     h2 {
+//       text-align: center;
+// } 
+//     h6 {
+//       padding-left: 30px;
+//       padding-top: 20px;
+//     }
+//     ion-row {
+//       padding-left: 10px;
+//     }
+//     // ion-button{
+//     //   padding-top: 20px;
+//     // }
+//     // .boton {
+//     //  position: relative;
+//     //   margin-left: 70%;
+//     //   padding-top: 10%;
+//     // }
+// }
+//  @media (max-width: 1000px) {
+//       h2 {
+//         text-align: center;
+//   }
+//       h6 {
+//         padding-left: 30px;
+//       padding-top: 20px;
+//   }
+//   ion-row {
+//       padding-left: 10px;
+//     }
+//     // ion-button{
+//     //   padding-top: 20px;
+//     // }
+// }
