--- a/src/app/ingreso/authorization/authorization.page.html
+++ b/src/app/ingreso/authorization/authorization.page.html
@@ -7,25 +7,18 @@
     </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
-
-    <ion-row style="place-content: center">
-        <h3>¿Quien autoriza el ingreso?</h3>
-    </ion-row>
-    <ion-row>
-        <ion-list>
-            <ion-item>
-                <ion-select class="select-people-size" placeholder="¿Quien autoriza?" okText="Seleccionar" [(ngModel)]="index">
-                    <ion-select-option [value]=i *ngFor="let p of personaAut; let i = index"> {{p.nombrePersona}} {{p.apellidoPersona}}</ion-select-option>
-                </ion-select>
-            </ion-item>
-        </ion-list>
-    </ion-row>
-
-    <ion-row style="place-content: center">
-        <h3>Acompañantes</h3>
-    </ion-row>
-    <ion-row>
+<ion-content class="ion-padding" fullscreen>
+    <h3>¿Quien autoriza el ingreso?</h3>
+    <ion-list lines="full" class="ion-no-margin ion-no-padding">
+        <ion-item>
+            <ion-label>¿Quien autoriza?</ion-label>
+            <ion-select class="select-people-size" okText="Seleccionar" [(ngModel)]="index">
+                <ion-select-option [value]=i *ngFor="let p of personaAut; let i = index"> {{p.nombrePersona}} {{p.apellidoPersona}}</ion-select-option>
+            </ion-select>
+        </ion-item>
+        <ion-item>
+            <h3>Acompañantes</h3>
+        </ion-item>
         <ion-item>
             <ion-label>Cantidad: </ion-label>
             <ion-select class="select-people-size" placeholder="0" okText="Seleccionar" [(ngModel)]="cantidad">
@@ -44,6 +37,8 @@
             <ion-input style="text-align: center" type="number" placeholder="Ingrese DNI" [(ngModel)]="dni"></ion-input>
             <ion-icon name="add" color="black" (click)="buscarAcompaniante()"></ion-icon>
         </ion-item>
+    </ion-list>
+    <ion-row>
         <!-- <ion-list>
             <ion-row>
                 <ion-col>
@@ -98,7 +93,7 @@
 </ion-content>
 
 <ion-footer no-border>
-    <ion-button (click)="global()">
+    <ion-button style="float: right;" (click)="global()">
         Procesar Ingreso
     </ion-button>
 </ion-footer>
