--- a/src/app/Owner/authorizations/generate-qr/generate-qr.page.html
+++ b/src/app/Owner/authorizations/generate-qr/generate-qr.page.html
@@ -91,7 +91,7 @@
               </form>
             </mat-step>
             <mat-step>
-              <ng-template matStepLabel>Generar autorización</ng-template>
+              <ng-template matStepLabel>Generar QR</ng-template>
               <div>
                 <!-- <button mat-button matStepperPrevious>Atras</button>
                 <button mat-button color="primary" (click)="createPdf()" matStepperNext>Crear Autorizacion</button> -->
