--- a/src/app/Owner/authorizations/generate-qr/generate-qr.page.html
+++ b/src/app/Owner/authorizations/generate-qr/generate-qr.page.html
@@ -100,7 +100,7 @@
               </div>
             </mat-step>
             <mat-step>
-              <ng-template matStepLabel>Evniar autorización</ng-template>
+              <ng-template matStepLabel>Enviar autorización</ng-template>
               <div>
                 <!-- <button mat-button color="primary" (click)="stepper.reset()">Reset</button>
                 <button mat-button color="primary" (click)="crearQr()" matStepperPrevious>Crear Autorizacion</button>
