new vehicle propietario arrreglado

--- a/src/app/Owner/porteria/vehicles/newvehicle/newvehicle.page.html
+++ b/src/app/Owner/porteria/vehicles/newvehicle/newvehicle.page.html
@@ -11,10 +11,10 @@
     <h2>Informacion del Vehiculo</h2>
     <ion-row>
         <ion-item>
-            <ion-label position="floating">Dominio
+            <!-- <ion-label position="floating">Dominio
                 <ion-text color="danger">*</ion-text>
-            </ion-label>
-            <ion-input [(ngModel)]="dominio" required type="text"></ion-input>
+            </ion-label> -->
+            <ion-input disabled [(ngModel)]="dominio" required type="text"></ion-input>
         </ion-item>
     </ion-row>
     <ion-row>
