--- a/src/app/Owner/events/new-friend/new-friend.page.html
+++ b/src/app/Owner/events/new-friend/new-friend.page.html
@@ -17,7 +17,7 @@
         </ion-item>
     </ion-row>
     <div style="text-align-last: right">
-        <ion-button class="mt-4 ion-align-self-end" (click)="getpersona()">Aceptar</ion-button>
+        <ion-button class="mt-4 ion-align-self-end" (click)="verficarSiAmigoExiste()">Aceptar</ion-button>
     </div>
 
 </ion-content>
