--- a/src/app/User/menu-user/menu-user.page.html
+++ b/src/app/User/menu-user/menu-user.page.html
@@ -9,7 +9,7 @@
     <ion-card>
         <ion-card-header>
             <ion-card-title>Bienvenido!</ion-card-title>
-            <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+            <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
         </ion-card-header>
         <ion-card-content>
             <ion-list>
