--- a/src/app/Administrador/event-report/event-report.page.html
+++ b/src/app/Administrador/event-report/event-report.page.html
@@ -9,11 +9,11 @@
 
 <ion-content class="ion-padding">
 
-    <ion-item>
+    <!-- <ion-item>
         <ion-label>Selecione una fecha</ion-label>
         <ion-icon mode="ios" name="calendar"></ion-icon>
         <ion-datetime displayFormat="DD/MM/YYYY" placeholder="01-01-19" cancel-text='Cancelar' done-text="Seleccionar" [(ngModel)]="fecha" min="2019" max="2030" (ionChange)="obtener()"></ion-datetime>
-    </ion-item>
+    </ion-item> -->
 
     <ion-card>
         <ion-list>
