Mis eventos component creado

--- a/src/app/Owner/events/events.page.html
+++ b/src/app/Owner/events/events.page.html
@@ -1,14 +1,18 @@
 <ion-tabs>
 
-  <ion-tab-bar color="primary" slot="bottom">
-    <ion-tab-button tab="places">
-      <ion-label>Lugares</ion-label>
-      <ion-icon name="home"></ion-icon>
-    </ion-tab-button>
-    <ion-tab-button tab="friendsList">
-      <ion-label>Lista de Amigos</ion-label>
-      <ion-icon name="contact"></ion-icon>
-    </ion-tab-button>
-  </ion-tab-bar>
+    <ion-tab-bar color="primary" slot="bottom">
+        <ion-tab-button tab="places">
+            <ion-label>Lugares</ion-label>
+            <i class="fas fa-2x fa-map-marker-alt"></i>
+        </ion-tab-button>
+        <ion-tab-button tab="my-events">
+            <ion-label>Eventos</ion-label>
+            <i class="fas fa-2x fa-users"></i>
+        </ion-tab-button>
+        <ion-tab-button tab="friendsList">
+            <ion-label>Lista de Amigos</ion-label>
+            <i class="fas fa-2x fa-list"></i>
+        </ion-tab-button>
+    </ion-tab-bar>
 
 </ion-tabs>
