msj de persona no existe y lista amigos corregido

--- a/src/app/Owner/events/view-friend-list/view-friend-list.page.html
+++ b/src/app/Owner/events/view-friend-list/view-friend-list.page.html
@@ -38,7 +38,7 @@
 
 <ion-footer>
     <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-        <ion-fab-button routerLink="/add-friend">
+        <ion-fab-button [routerLink]="['//add-friend', idLista]">
           <ion-icon name="add"></ion-icon>
         </ion-fab-button>
     </ion-fab>
