--- a/src/app/ingreso/authorization/authorization.page.html
+++ b/src/app/ingreso/authorization/authorization.page.html
@@ -22,7 +22,7 @@
         </ion-item>
         <ion-item>
             <ion-label>Cantidad: </ion-label>
-            <ion-select class="select-people-size" placeholder="0" okText="Seleccionar" [(ngModel)]="cantidad">
+            <ion-select class="select-people-size" placeholder="0" okText="Seleccionar">
                 <ion-select-option value=0> 0 </ion-select-option>
                 <ion-select-option value=1> 1 </ion-select-option>
                 <ion-select-option value=2> 2 </ion-select-option>
