--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -37,7 +37,7 @@
                 </ion-item>
                 <ion-item>
                     <ion-icon slot="start" name="settings"></ion-icon>
-                    <ion-label (click)="deshabilitar()">Deshabilitar Personas</ion-label>
+                    <ion-label (click)="deshabilitar()">Aplicar derecho de admisión</ion-label>
                 </ion-item>
                 <ion-item>
                     <ion-icon slot="start" name="list-box"></ion-icon>
