--- a/src/app/Administrador/event-detail/event-detail.page.html
+++ b/src/app/Administrador/event-detail/event-detail.page.html
@@ -13,8 +13,11 @@
     <ion-col>
       <ion-label>Ubicación :</ion-label>
     </ion-col>
-    <ion-col>
+    <ion-col *ngIf="evento?.eventoDomicilio">
       <ion-label> C: {{evento?.eventoDomicilio.casaDomicilio}} M: {{evento?.eventoDomicilio.manzanaDomicilio}}</ion-label>
+    </ion-col>
+    <ion-col *ngIf="evento?.eventoEspacio">
+      <ion-label> {{evento?.eventoEspacio.nombreEspacioComun}}</ion-label>
     </ion-col>
   </ion-grid>
   <ion-grid>
@@ -29,12 +32,47 @@
   <ion-grid>
     <ion-label>Invitados</ion-label>
   </ion-grid>
-  <ion-card>
+  <!-- <ion-card>
     <ion-list>
       <ion-item *ngFor="let p of evento?.eventoDetalles">
         <ion-label>{{p.detallePersonaEvento.apellidoPersona}} {{p.detallePersonaEvento.nombrePersona}} {{p.detallePersonaEvento.dniPersona}}</ion-label>
       </ion-item>
     </ion-list>
-  </ion-card>
+  </ion-card> -->
+
+  <ion-row>
+    <ion-card>
+      <ion-item>
+        <ion-list>
+          <ion-row>
+            <ion-col>
+              <ion-label> Apellido </ion-label>
+            </ion-col>
+            <ion-col>
+              <ion-label> Nombre </ion-label>
+            </ion-col>
+            <ion-col>
+              <ion-label> DNI </ion-label>
+            </ion-col>
+          </ion-row>
+        </ion-list>
+      </ion-item>
+      <ion-item *ngFor="let p of evento?.eventoDetalles">
+        <ion-list>
+          <ion-row>
+            <ion-col>
+              <ion-label> {{p.detallePersonaEvento.apellidoPersona}} </ion-label>
+            </ion-col>
+            <ion-col>
+              <ion-label> {{p.detallePersonaEvento.nombrePersona}} </ion-label>
+            </ion-col>
+            <ion-col>
+              <ion-label> {{p.detallePersonaEvento.dniPersona}} </ion-label>
+            </ion-col>
+          </ion-row>
+        </ion-list>
+      </ion-item>
+    </ion-card>
+  </ion-row>
 
 </ion-content>
