--- a/src/app/Administrador/event-report/event-report.page.html
+++ b/src/app/Administrador/event-report/event-report.page.html
@@ -17,8 +17,8 @@
 
     <ion-card>
         <ion-list>
-            <ion-item *ngFor="let e of eventos; let i = index">
-                <label (click)="verEvento(i)">{{e.nombreEvento}}</label>
+            <ion-item *ngFor="let e of eventos; let i = index" (click)="verEvento(i)">
+                <label>{{e.nombreEvento}}</label>
             </ion-item>
         </ion-list>
     </ion-card>
