--- a/src/app/Owner/porteria/porteria.page.html
+++ b/src/app/Owner/porteria/porteria.page.html
@@ -1,5 +1,5 @@
 <ion-tabs>
-    <ion-tab-bar color="" slot="bottom">
+    <ion-tab-bar color="primary" slot="bottom">
         <ion-tab-button tab="records">
             <ion-label>Registros</ion-label>
             <ion-icon name="document"></ion-icon>
