--- a/src/app/ingreso/transport/transport.page.html
+++ b/src/app/ingreso/transport/transport.page.html
@@ -7,7 +7,8 @@
     </ion-toolbar>
 </ion-header>
 
-<ion-content style="vertical-align: -webkit-baseline-middle">
+<ion-content class="ion-padding" style="vertical-align: -webkit-baseline-middle">
+    <label >Vehículos:</label>
     <form #f="ngForm">
         <ion-list>
             <ion-radio-group>
