--- a/src/app/ingreso/typeofingress/typeofingress.page.html
+++ b/src/app/ingreso/typeofingress/typeofingress.page.html
@@ -9,15 +9,16 @@
 
 <ion-content class="ion-padding">
 
-    <ion-row class="row h-100 justify-content-center align-items-center">
-        <ion-col>
-            <ion-button size="large" routerLink="/qringress">
-                <ion-label><i class="fas fa-qrcode"></i>Ingreso<br>Rapido</ion-label>
+    <ion-row>
+        <ion-col size="6">
+            <ion-button  size="large" routerLink="/qringress">  
+                <ion-icon slot="start" name="qr-scanner"></ion-icon> <ion-label> Ingreso<br>Rapido</ion-label>
             </ion-button>
         </ion-col>
-        <ion-col>
-            <ion-button size="large" routerLink="/dnisearch">
-                <ion-label><i class="fas fa-keyboard"></i>Ingreso<br>Manual</ion-label>
+        <ion-col size="6">
+            <ion-button size="large"  routerLink="/dnisearch">
+                <ion-icon slot="start" name="apps"></ion-icon>
+                <ion-label> Ingreso<br>Manual</ion-label>
             </ion-button>
         </ion-col>
     </ion-row>
