--- a/src/app/security/login/login.page.html
+++ b/src/app/security/login/login.page.html
@@ -31,7 +31,7 @@
                         Obtene ayuda.
                     </b>
                 </p>
-                <button type="submit" value="submit" class="btn btn-primary btn-lg btn-block" (click)="onLogin()" [disabled]="!(user.email && user.password)">Login</button>
+                <button type="submit" value="submit" class="btn btn-primary btn-lg btn-block" (click)="onLogin()" [disabled]="!(user.email && user.password)">Iniciar sesión</button>
                 <button type="button" class="btn btn-primary btn-lg btn-block" routerLink="/register">Registrarse</button>
             </form>
         </div>
