--- a/src/app/ingreso/typeofingress/typeofingress.page.scss
+++ b/src/app/ingreso/typeofingress/typeofingress.page.scss
@@ -1,3 +1,8 @@
-i {
-    margin-inline-end: 3px;
+ion-button{
+    width: 100%;
+}
+ion-row{
+    // align-content: center;
+    height: 100%;
+    padding-top: 14rem;
 }
