confirme-la-contraseña

--- a/src/app/security/register/register.page.html
+++ b/src/app/security/register/register.page.html
@@ -66,7 +66,7 @@
             </ion-text>
         </ion-item>
         <ion-item>
-            <ion-label position="floating">Contraseña
+            <ion-label position="floating">Confirme la contraseña
                 <ion-text color="danger">*</ion-text>
             </ion-label>
             <ion-input name="pass1" minlength="6" maxlength="15" required [(ngModel)]="password1" type="password"></ion-input>
