--- a/src/app/Owner/events/newevent/newevent.page.html
+++ b/src/app/Owner/events/newevent/newevent.page.html
@@ -14,7 +14,7 @@
                 <ion-label>Nombre evento
                     <ion-text color="danger">*</ion-text>
                 </ion-label>
-                <ion-input [(ngModel)]="nombre evento" required></ion-input>
+                <ion-input [(ngModel)]="nombre" required></ion-input>
             </ion-item>
         </ion-item>
         <ion-item>
