--- a/src/app/User/authorizations/authorizations.page.html
+++ b/src/app/User/authorizations/authorizations.page.html
@@ -11,7 +11,7 @@
 <ion-content fullscreen class="ion-padding">
     <ion-row>
         <ion-col size="12">
-            <ng-container *ngIf="autorizaciones?.length === 0; then thenTemplate; else elseTemplate"></ng-container>
+            <ng-container *ngIf="false; then thenTemplate; else elseTemplate"></ng-container>
             <ng-template #thenTemplate>
                 <h2 style="text-align: center;"> Usted no posee autorizaciones </h2>
 
