--- a/src/app/Owner/events/new-friend/new-friend.page.html
+++ b/src/app/Owner/events/new-friend/new-friend.page.html
@@ -7,7 +7,7 @@
     </ion-toolbar>
   </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
 
     <ion-row class="ion-justify-content-around">
         <h3>Por favor ingrese el DNI</h3>
