--- a/src/app/Administrador/report-ingreso-egreso/report-ingreso-egreso.page.html
+++ b/src/app/Administrador/report-ingreso-egreso/report-ingreso-egreso.page.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar color="primary">
         <ion-buttons slot="start">
-            <ion-back-button defaultHref='menu-administrator'></ion-back-button>
+            <ion-back-button defaultHref='/'></ion-back-button>
         </ion-buttons>
         <ion-title class="ion-text-capitalize ion-text-center">Planilla Ingreso/Egreso</ion-title>
     </ion-toolbar>
@@ -9,83 +9,116 @@
 
 <ion-content>
 
+    <ion-row style="text-align-last: center;">
+        <ion-col class="col-fecha">
+            <ion-item>
+                    <ion-label>Fecha Desde:</ion-label>
+                    <ion-datetime displayFormat="DD-MM-YYYY"  
+                                    picker-format="DD-MM-YYYY"
+                                    max="2030-12-31"
+                                    min="2015-01-01"
+                                    [value]="fechaDesde"
+                                    [(ngModel)]="fechaDesde"></ion-datetime>
+                </ion-item>
+        </ion-col>
+        <ion-col class="col-fecha">
+            <ion-item>
+                    <ion-label>Fecha Hasta:</ion-label>
+                    <ion-datetime displayFormat="DD-MM-YYYY"  
+                                    picker-format="DD-MM-YYYY"
+                                    [value]="fechaHasta"
+                                    [max]="fechaMax | date: 'yyyy-MM-dd'"
+                                    min="2015-01-01"
+                                    [(ngModel)]="fechaHasta"></ion-datetime>
+
+                </ion-item>
+        </ion-col>
+        <ion-col>
+            <ion-button (click)="filtrar()" shape="round" fill="outline" color="dark"><ion-icon name="search"></ion-icon></ion-button>
+        </ion-col>
+    </ion-row>
+
     <ion-row>
         <ion-list>
-            <ion-row>
-                <ion-col>
-                    <ion-item>
-                        <ion-label>
-                            Apellido
-                        </ion-label>
-                    </ion-item>
-                </ion-col>
-                <ion-col>
-                    <ion-item>
-                        <ion-label>
-                            Nombre
-                        </ion-label>
-                    </ion-item>
-                </ion-col>
-                <ion-col>
-                    <ion-item>
-                        <ion-label>
-                            DNI
-                        </ion-label>
-                    </ion-item>
-                </ion-col>
-                <ion-col>
-                    <ion-item>
-                        <ion-label>
-                            Marca
-                        </ion-label>
-                    </ion-item>
-                </ion-col>
-                <ion-col>
-                    <ion-item>
-                        <ion-label>
-                            Dominio
-                        </ion-label>
-                    </ion-item>
-                </ion-col>
-            </ion-row>
-            <ion-row *ngFor="let p of planiallaIngresoEgreso">
-                <ion-col>
-                    <ion-item>
-                        <ion-label>
-                            {{p.planillaPersona.apellidoPersona}}
-                        </ion-label>
-                    </ion-item>
-                </ion-col>
-                <ion-col>
-                    <ion-item>
-                        <ion-label>
-                            {{p.planillaPersona.nombrePersona}}
-                        </ion-label>
-                    </ion-item>
-                </ion-col>
-                <ion-col>
-                    <ion-item>
-                        <ion-label>
-                            {{p.planillaPersona.dniPersona}}
-                        </ion-label>
-                    </ion-item>
-                </ion-col>
-                <ion-col>
-                    <ion-item>
-                        <ion-label>
-                            {{p.planillaVehiculo.vehiculoMarca.nombreMarca}}
-                        </ion-label>
-                    </ion-item>
-                </ion-col>
-                <ion-col>
-                    <ion-item>
-                        <ion-label>
-                            {{p.planillaVehiculo.dominio}}
-                        </ion-label>
-                    </ion-item>
-                </ion-col>
-            </ion-row>
-        </ion-list>
+          <ion-row>
+              <ion-col>
+                  <ion-item>
+                      <ion-label>
+                          Apellido
+                      </ion-label>
+                  </ion-item>
+              </ion-col>
+              <ion-col>
+                  <ion-item>
+                      <ion-label>
+                          Nombre
+                      </ion-label>
+                  </ion-item>
+              </ion-col>
+              <ion-col>
+                  <ion-item>
+                      <ion-label>
+                          DNI
+                      </ion-label>
+                  </ion-item>
+              </ion-col>
+              <ion-col>
+                  <ion-item>
+                      <ion-label>
+                          Marca
+                      </ion-label>
+                  </ion-item>
+              </ion-col>
+              <ion-col>
+                  <ion-item>
+                      <ion-label>
+                          Dominio
+                      </ion-label>
+                  </ion-item>
+              </ion-col>
+          </ion-row>
+          <ion-row *ngFor="let p of planilla">
+              <ion-col>
+                  <ion-item>
+                      <ion-label>
+                          {{p.planillaPersona.apellidoPersona}}
+                      </ion-label>
+                  </ion-item>
+              </ion-col>
+              <ion-col>
+                  <ion-item>
+                      <ion-label>
+                          {{p.planillaPersona.nombrePersona}}
+                      </ion-label>
+                  </ion-item>
+              </ion-col>
+              <ion-col>
+                  <ion-item>
+                      <ion-label>
+                          {{p.planillaPersona.dniPersona}}
+                      </ion-label>
+                  </ion-item>
+              </ion-col>
+              <ion-col>
+                  <ion-item>
+                      <ion-label *ngIf="p.planillaVehiculo?.vehiculoMarca.nombreMarca !== null">
+                          {{p.planillaVehiculo.vehiculoMarca.nombreMarca}}
+                      </ion-label>
+                      <ion-label *ngIf="p.planillaVehiculo?.vehiculoMarca.nombreMarca === null">
+                      </ion-label>
+                  </ion-item>
+              </ion-col>
+              <ion-col>
+                  <ion-item>
+                      <ion-label *ngIf="p.planillaVehiculo?.dominio !== null">
+                          {{p.planillaVehiculo.dominio}}
+                      </ion-label>
+                      <ion-label *ngIf="p.planillaVehiculo?.dominio === null">
+                      </ion-label>
+                  </ion-item>
+              </ion-col>
+          </ion-row>
+      </ion-list>
     </ion-row>
 
 
